VZDEV/src/objects/CCPM_Action__c.object
<CustomObject>
    <fields>
        <fullName>CCPM_RE_Action_ID__c</fullName>
        <externalId>true</externalId>
        <label>RE Action ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_actionNumber__c</fullName>
        <displayFormat>ACT{00000}</displayFormat>
        <label>Action Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CCPM_actionObject__c</fullName>
        <label>Action Object</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CCPM_type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>CCPM_journey__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CCPM_endDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPM_masterObject__c</fullName>
        <label>Master Object</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_relatedObjectAction__c</fullName>
        <label>Related Object Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Remove Queued And Attach to Winner</fullName>
                </value>
                <value>
                    <fullName>Close And Attach To Winner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_relatedObject__c</fullName>
        <label>Related Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SMSMessage</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_startDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPM_type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Upsert</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>RE Action</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Merge_Field_Updates</fullName>
        <columns>NAME</columns>
        <columns>CCPM_masterObject__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CCPM_actionObject__c</columns>
        <columns>CCPM_active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CCPM_Action__c.CCPM_mergeInsertOrUpdateAction</value>
        </filters>
        <label>Merge Field Updates</label>
    </listViews>
    <listViews>
        <fullName>Related_Object_Action</fullName>
        <columns>NAME</columns>
        <columns>CCPM_actionObject__c</columns>
        <columns>CCPM_masterObject__c</columns>
        <columns>CCPM_relatedObject__c</columns>
        <columns>CCPM_relatedObjectAction__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CCPM_Action__c.CCPM_RelatedObjectAction</value>
        </filters>
        <label>Related Object Action</label>
    </listViews>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RE Actions</pluralLabel>
    <recordTypes>
        <fullName>CCPM_RelatedObjectAction</fullName>
        <active>true</active>
        <label>Related Object Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>CCPM_insertOrUpdateAction</fullName>
        <active>true</active>
        <label>Insert Or Update Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>CCPM_mergeInsertOrUpdateAction</fullName>
        <active>true</active>
        <label>Merge Insert Or Update Action</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Name_cannot_be_empty</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Name Cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Update_Not_Allowed</fullName>
        <active>true</active>
        <description>Update is not a valid value if Action object is not equal to primary object.</description>
        <errorConditionFormula>AND(RecordType.Name &lt;&gt; &apos;Related Object Action&apos;, TEXT( CCPM_type__c ) = &apos;Update&apos;, TEXT( CCPM_actionObject__c )  &lt;&gt;  TEXT(  CCPM_masterObject__c ))</errorConditionFormula>
        <errorDisplayField>CCPM_type__c</errorDisplayField>
        <errorMessage>Update is not a valid value if Action object is not equal to primary object.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Upsert_not_allowed</fullName>
        <active>true</active>
        <description>Upsert is not a valid value if Action object is equal to primary object.</description>
        <errorConditionFormula>AND(RecordType.Name &lt;&gt; &apos;Related Object Action&apos;, TEXT( CCPM_type__c ) = &apos;Upsert&apos;, TEXT( CCPM_actionObject__c ) = TEXT(  CCPM_masterObject__c ))</errorConditionFormula>
        <errorDisplayField>CCPM_type__c</errorDisplayField>
        <errorMessage>Upsert is not a valid value if Action object is equal to primary object.</errorMessage>
    </validationRules>
</CustomObject>